tests/cli/snapshots/cli__init__named_and_titled_file.snap
---
source: tests/cli/init.rs
expression: "workspace.read(\"specs.yaml\")"
---
$schema: https://slcr.io/reference/schemas/spec/v1.schema.json
formatVersion: "1"
spec:
  name: billing
root:
  kind: section
  id: SEC-001
  title: Billing Service
glossary:
  kind: section
  id: SEC-002
  title: Glossary
