tests/cli/snapshots/cli__init__toml.snap
---
source: tests/cli/init.rs
info:
  program: slcr
  args:
    - init
    - todo-api.slcr.toml
---
success: true
exit_code: 0
----- stdout -----
todo-api.slcr.toml: created specification todo-api

----- stderr -----
