tests/cli/snapshots/cli__init__toml_file.snap
---
source: tests/cli/init.rs
expression: workspace.read(file)
---
"$schema" = "https://slcr.io/reference/schemas/spec/v1.schema.json"
formatVersion = "1"

[spec]
name = "todo-api"

[root]
kind = "section"
id = "SEC-001"
title = "todo-api"

[glossary]
kind = "section"
id = "SEC-002"
title = "Glossary"
